[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "src"
author = "Erico Augusto da Silva"
author-email = "augusto.ericosilva@gmail.com"
home-page = "https://github.com/augustoerico/aws-api-gw-middleware_py36"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = "~=3.6"
